backport: [multiple changes]

2004-07-06  Eric Christopher  <echristo@redhat.com>

        PR rtl-optimization/14700
        Backport from mainline:
        2004-06-30  Zack Weinberg  <zack@codesourcery.com>
        * combine.c (distribute_notes): Don't look at global_regs for
        pseudos.

        2004-06-24  Eric Christopher  <echristo@redhat.com>
        * combine.c (distribute_notes): Don't delete sets to
        global register variables.

From-SVN: r84169